Performance improvements suggested by findbugs-report
git-svn-id: https://svn.apache.org/repos/asf/james/server/trunk@1092720 13f79535-47bb-0310-9956-ffa450edef68